--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
+    "uuid": "^8.3.2",
     "jest": "^26.6.3",
     "supertest": "^6.1.3"
+    
   }
 }
