--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"npm start",
+    "start": "npm start",
     "test": "jest --verbose --coverage"
-   },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HaneenKh88/basic-api-server.git"
@@ -22,10 +22,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "uuid": "^8.3.2",
     "jest": "^26.6.3",
-    "supertest": "^6.1.3"
-    
+    "morgan": "^1.10.0",
+    "supertest": "^6.1.3",
+    "uuid": "^8.3.2"
   }
 }
